--- a/index.html
+++ b/index.html
@@ -7,22 +7,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
 	<link rel="stylesheet" type="text/css" href="css/owl.transitions.css"/>
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.css"/>
 	<link rel="stylesheet" type="text/css" href="css/animate.css"/>
 	<link rel="stylesheet" type="text/css" href="css/main.css"/>
-
-
-	<script type="text/javascript" src="js/jquery.js"></script>
-	<script type="text/javascript" src="js/ajaxchimp.js"></script>
-
-	<script type="text/javascript" src="js/owl.carousel.min.js"></script>
-	<script type="text/javascript" src="js/wow.js"></script>
-	<script type="text/javascript" src="js/parallax.js"></script>
-	<script type="text/javascript" src="js/nicescroll.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
-	<script type="text/javascript" src="js/scrollTo.js"></script>
 </head>
 <body>
 
@@ -106,11 +97,6 @@
 		</div>
 	</section>
 	<!--  End Featured On Section  -->
-
-
-
-
-
 
 	<!--  About Section  -->
 	<section class="about" id="about">
@@ -255,10 +241,6 @@
 	<!--  End Testimonials Section  -->
 
 
-
-
-
-
 	<!--  Email Subscription Section  -->
 	<section class="sub_box">
 		<p class="cta_text animated wow fadeInDown">We're hiring. Join Our company!</p>
@@ -272,11 +254,6 @@
 		<div class="message" id="success_msg">Thank You For Your Subscription.</div>
 	</section>
 	<!--  End Email Subscription Section  -->
-
-
-
-
-
 
 	<!--  Footer Section  -->
 	<footer>
@@ -295,5 +272,19 @@
 	</footer>
 	<!--  End Footer Section  -->
 
+
+	<!-- Scripts -->
+	
+<!-- Latest compiled and minified JavaScript -->
+	<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+	<script defer type="text/javascript" src="js/ajaxchimp.js"></script>
+
+	<script defer type="text/javascript" src="js/owl.carousel.min.js"></script>
+	<script defer type="text/javascript" src="js/wow.js"></script>
+	<script defer type="text/javascript" src="js/parallax.js"></script>
+	<script defer type="text/javascript" src="js/nicescroll.js"></script>
+	<script defer type="text/javascript" src="js/main.js"></script>
+	<script defer type="text/javascript" src="js/scrollTo.js"></script>
 </body>
 </html>
